# vbb

./: CMakeLists.txt  Doxyfile  MANIFEST  README  canvas.cpp  canvas.h  compinst  config.cpp  config.h  main.cpp  pdfslides.cpp  pdfslides.h  vbb.cfg  vbb_en_man.1  vbb_en_menu  vbb_es_man.1  vbb_es_menu
